make accesses to renderObjects for user and editor thread safe